// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createElement > Attribute 1`] = `
{
  "children": [],
  "key": {
    "children": [],
    "location": null,
    "quoted": false,
    "type": "Literal",
    "value": "color",
  },
  "location": null,
  "type": "Attribute",
  "value": {
    "children": [],
    "location": null,
    "quoted": false,
    "type": "Literal",
    "value": "red",
  },
}
`;

exports[`createElement > Coment 1`] = `
{
  "children": [],
  "kind": "Macro",
  "location": null,
  "type": "Comment",
  "value": "This is comment",
}
`;

exports[`createElement > Dot 1`] = `
{
  "children": [],
  "location": null,
  "type": "Dot",
}
`;

exports[`createElement > Edge 1`] = `
{
  "children": [],
  "location": null,
  "targets": [
    {
      "children": [],
      "id": {
        "children": [],
        "location": null,
        "quoted": true,
        "type": "Literal",
        "value": "a",
      },
      "location": null,
      "type": "NodeRef",
    },
    {
      "children": [],
      "id": {
        "children": [],
        "location": null,
        "quoted": true,
        "type": "Literal",
        "value": "b",
      },
      "location": null,
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`createElement > Graph 1`] = `
{
  "children": [],
  "directed": true,
  "location": null,
  "strict": false,
  "type": "Graph",
}
`;

exports[`createElement > Literal 1`] = `
{
  "children": [],
  "location": null,
  "quoted": true,
  "type": "Literal",
  "value": "literal value",
}
`;

exports[`createElement > Node 1`] = `
{
  "children": [],
  "id": {
    "children": [],
    "location": null,
    "quoted": false,
    "type": "Literal",
    "value": "node_id",
  },
  "location": null,
  "type": "Node",
}
`;

exports[`createElement > NodeRef 1`] = `
{
  "children": [],
  "id": {
    "children": [],
    "location": null,
    "quoted": true,
    "type": "Literal",
    "value": "b",
  },
  "location": null,
  "type": "NodeRef",
}
`;

exports[`createElement > NodeRefGroup 1`] = `
{
  "children": [
    {
      "children": [],
      "id": {
        "children": [],
        "location": null,
        "quoted": true,
        "type": "Literal",
        "value": "a",
      },
      "location": null,
      "type": "NodeRef",
    },
    {
      "children": [],
      "id": {
        "children": [],
        "location": null,
        "quoted": true,
        "type": "Literal",
        "value": "b",
      },
      "location": null,
      "type": "NodeRef",
    },
  ],
  "location": null,
  "type": "NodeRefGroup",
}
`;

exports[`createElement > Subgraph 1`] = `
{
  "children": [],
  "location": null,
  "type": "Subgraph",
}
`;
